Added to readme/web page.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-Coming Soon: Electon Maps!
+<html>
+<body>
+Coming Soon: Election Maps!
 
-For now, take a look at <a href="2020/index.html">the map for 2020</a>.
-
+This is the temporary landing page for the github repository containing code for my dot plot election maps. More
+information is to come, but for now you can:
+<ul>
+    <li>See a live example of <a href="2020/index.html">the map showing data from the 2020 US presidential election</a>.</li>
+    <li>See an alternate view of <a href="2020/index.html">the map using bar charts</a>.</li>
+    <li>Jump to the <a href="https://github.com/davegotz/election_maps">source code in the public github repo</a>.
+</ul>
+This project was developed by David Gotz of the Visual Analytics and Communication Lab (VACLab) at UNC-Chapel Hill.
+<a href="https://vaclab.unc.edu/">Click here</a> to learn more.
+</body>
+</html>
