--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ This is the temporary landing page for the github repository containing code for
 information is to come, but for now you can:
 <ul>
     <li>See a live example of <a href="2020/index.html">the map showing data from the 2020 US presidential election</a>.</li>
-    <li>See an alternate view of <a href="2020/index.html">the map using bar charts</a>.</li>
+    <li>See an alternate view of <a href="2020/index_bars.html">the map using bar charts</a>.</li>
     <li>Jump to the <a href="https://github.com/davegotz/election_maps">source code in the public github repo</a>.
 </ul>
 This project was developed by David Gotz of the Visual Analytics and Communication Lab (VACLab) at UNC-Chapel Hill.
